# DDR_UTAH_FORGE

./: .gitignore  AGENTS.md  CHANGELOG.md  DATA_CONTRACT.md  PROJECT_CONTEXT.md  README.md  carousel.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  dependency-audit.yml
.streamlit/: config.toml
app/api/: main.py
app/ui/: components.py  constants.py  ddr_intelligence.py  loaders.py  ui_artifacts.py  utils.py
configs/: ddr_rag.yaml
configs/ddr_profiles/: default.yaml  operator_alpha.yaml  utah_forge.yaml
configs/vocab/: ddr_vocab.yaml
demos/: pipeline_demo.html
docs/: DDR_ADAPTATION_PLAN.md  adding_new_operator.md  report_extractors.md
scripts/: ask_query.py  batch_preprocess_raw_ddrs.py  build_causality.py  build_global_index.py  build_graphs.py  build_index.py  check_api_startup.py  check_environment.py  check_vocab_coverage.py  diagnose_extraction.py  extract_completion_string.py  extract_ddr_sections.py  extract_drilling_metrics.py  extract_frac_sleeve_status.py  extract_general_notes.py  extract_weather.py  extract_well_sections.py  extract_wellbore_events.py  fetch_embedding_model.py  preprocess_hybrid.py  qa_gate.py  qc_raw_ddr_filenames.py  rebuild_field_analysis.py  run_api_demo.sh  run_ddr_intelligence.sh  run_eval.py  runtime_env.py  split_combined_ddr.py
src/ddr_rag/: __init__.py  causality_analyzer.py  ddr_extractor.py  ddr_profile.py  extractor_registry.py  filename_qc.py  graph_builder.py  npt_classifier.py  report_profile.py  vocab.py
src/rag_pdf/: toc.py  (+23 more)
tests/: test_ddr_filename_qc.py  test_ddr_report_profile.py  test_extractor_registry.py  test_search_generation_toggle.py  test_table_pdfplumber_region.py  test_utah_forge_extractor.py  test_utah_forge_npt_classifier.py  test_vocab.py
(+32 files in other folders)
