[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ddr-utah-forge"
version = "2.0.0"
description = "RAG pipeline and intelligence dashboard for Utah FORGE DDRs."
requires-python = ">=3.11"
dependencies = [
  "numpy==1.26.4",
  "pandas==2.3.3",
  "pyarrow==24.0.0",
  "pymupdf==1.26.7",
  "pdfplumber==0.11.9",
  "tiktoken==0.12.0",
  "faiss-cpu==1.13.2",
  "sentence-transformers==5.6.0",
  "transformers==5.13.0",
  "torch==2.13.0",
  "scikit-learn==1.5.2",
  "PyYAML==6.0.3",
  "pytesseract==0.3.13",
  "pdf2image==1.17.0",
  "fastapi==0.139.0",
  "uvicorn==0.50.0",
  "streamlit==1.58.0",
  "plotly==6.9.0",
  "requests==2.34.2",
  "pytest==9.1.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
